  For example, the most used conection would typically be the onlyt
  connection used.  In some rare situations, extra connections could
  be opened and end up on the top of the stack, causing extreme memory
  wastage.  Now, when connections are placed on the stack, they sink
  below existing connections that have more active objects.

3.9.0a8 (2008-12-15)
====================

New Features
------------

- Made ZEO Client Blob Cache control a bit more rational.  Now, when
  checking the cache size, the target is::

     blob-cache-size * (100 - blob-cache-size-check) / 100

  The makes it far more likely (but doesn't guarantee) that the blob
  cache size will remain under the maximum.

  The blob-cache-size check was reduced to 10%.

Bugs Fixed
----------

- Fixed a bug in the logic to reduce the blob cache size.

3.9.0a7 (2008-12-05)
====================

New Features
------------

- The Blob open method now supports a new mode, 'c', to open committed
  data for reading as an ordinary file, rather than as a blob file.
  The ordinary file may be used outside the current transaction and
  even after the blob's database connection has been closed.

- ClientStorage now provides blob cache management. When using
  non-shared blob directories, you can set a target cache size and the
  cache will periodically be reduced to the target size.

  The client blob directory layout has changed.  If you have existing
  non-shared blob directories, you will have to remove them.

Bugs Fixed
----------

- Starting ClientStorages sometimes failed with non-new but empty
  cache files.

3.9.0a6 (2008-11-30)
====================

New Features
------------

- ZODB 3.9 ZEO clients can connect to ZODB 3.8 servers.

Bug Fixes
---------

- ZODB 3.8 clients couldn't talk to  ZODB 3.9 servers.

- The history method on ZEO clients failed.


3.9.0a5 (2008-11-21)
====================

New Features
------------

- When a ZEO cache is stale and would need verification, a